--- a/package.json
+++ b/package.json
@@ -1,7 +1,11 @@
 {
   "private": true,
   "devDependencies": {
-    "gulp": "^3.8.8"
+    "gulp": "^3.9.0",
+    "laravel-elixir": "^4.2.0",
+    "laravel-elixir-vueify": "^1.0.2",
+    "lodash": "^3.10.1",
+    "vue-resource": "^0.6.0"
   },
   "dependencies": {
     "laravel-elixir": "^4.0.0",
