Done With Static (Dynamic) Server Interface => About to Add VueJs

--- a/composer.json
+++ b/composer.json
@@ -13,7 +13,10 @@
         "laravolt/eloquent-uuid": "^0.1.0",
         "intervention/image": "^2.3",
         "laravelcollective/html": "^5.2",
-        "maatwebsite/excel": "^2.1"
+        "maatwebsite/excel": "^2.1",
+        "barryvdh/laravel-ide-helper": "^2.1",
+        "doctrine/dbal": "^2.5",
+        "webpatser/laravel-uuid": "2.*"
     },
     "require-dev": {
         "fzaninotto/faker": "~1.4",
@@ -27,7 +30,8 @@
             "database"
         ],
         "psr-4": {
-            "App\\": "app/"
+            "App\\": "app/",
+            "Eureka\\": "app/EurekaCachet"
         }
     },
     "autoload-dev": {
@@ -50,6 +54,8 @@
             "php artisan clear-compiled"
         ],
         "post-update-cmd": [
+            "php artisan clear-compiled",
+            "php artisan ide-helper:generate",
             "php artisan optimize"
         ]
     },
