Done for today first Section

--- a/.env
+++ b/.env
@@ -3,9 +3,10 @@ APP_DEBUG=true
 APP_KEY=52TijQe8Cy9M4oijX1CT1zvr8nLPRsRA
 
 DB_HOST=localhost
+DB_PORT=3306
 DB_DATABASE=ryme
-DB_USERNAME=ryme
-DB_PASSWORD=ryme
+DB_USERNAME=root
+DB_PASSWORD=THomas@01
 
 CACHE_DRIVER=file
 SESSION_DRIVER=file
